--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html ⚡ lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AdSense full-width ad examples</title>
+  <title>Syco Mobilez</title>
   <link rel="canonical" href="http://nonblocking.io/">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+
   <style amp-custom>
     body {
       background-color: #DDDDDD;
@@ -24,7 +25,7 @@
     }
     h1 {
       padding: 12px 0;
-      margin: 0;
+      margin: 2;
     }
     p {
       margin: 0;
@@ -55,13 +56,14 @@
       text-align: center;
     }
   </style>
+
 </head>
 <body>
 <h1>Syco!</h1>
 <div class="content">
 
   <div class="header-img">
-    <amp-img src="img/hero@1x.jpg"
+    <amp-img src="logo.jpg"
              width="289" height="216"></amp-img>
   </div>
 
