--- a/index.html
+++ b/index.html
@@ -2,37 +2,18 @@
 <html ⚡ lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Syco Mobilez</title>
-  <link rel="canonical" href="http://nonblocking.io/">
+  <title>Syco Ads</title>
+  <link rel="canonical" href="http://nonblocking.io/" >
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-  <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-
   <style amp-custom>
-    body {
-      background-color: #DDDDDD;
+    amp-ad {
+      max-width: 500px;
     }
-    /** Put all content in unusual margins for testing. */
-    .content {
-      margin-left: 15px;
-      margin-right: 12px;
+    .red {
+      background-color: red;
     }
-    .further-indent {
-      margin-left: 30px;
-      margin-right: 30px;
-    }
-    h1 {
-      padding: 12px 0;
-      margin: 0;
-    }
-    p {
-      margin: 0;
-      padding: 6px 2px;
-    }
-    h1, .everything {
-      background-color: #999999;
+    .talldiv {
+      height: 2000px;
     }
     amp-ad div[placeholder] {
       background-color: lightgray;
@@ -47,124 +28,78 @@
       content: "No ad";
       color: white;
     }
+    amp-ad div[placeholder]::after,
+    amp-ad div[fallback]::after {
+      font-size: 20px;
+      line-height: 30px;
+      text-align: center;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: calc(50% - 15px);
+    }
     amp-user-notification {
       background-color: lightgray;
       padding: 5px;
     }
-    .header-img {
-      margin: 0 auto;
-      text-align: center;
-    }
   </style>
+  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"></script>
+  <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+  <script async custom-element="amp-sticky-ad" src="https://cdn.ampproject.org/v0/amp-sticky-ad-1.0.js"></script>
 
 </head>
 <body>
-<h1>Syco!</h1>
-<div class="content">
 
-  <div class="header-img">
-    <amp-img src="logo.jpg"
-             width="289" height="216"></amp-img>
-  </div>
+  <amp-user-notification
+      layout=nodisplay
+      id="amp-user-notification">
+    This site uses cookies to personalize content.
+    <a href="#learn-more">Learn more.</a>
+    <button on="tap:amp-user-notification.dismiss" tabindex="0">I accept</button>
+  </amp-user-notification>
 
-  <p>
-    Canem ipsum dolor sit amet, consectetur adipiscing elit.
-    Curabitur ullamcorper turpis vel commodo scelerisque. Phasellus
-    luctus nunc ut elit cursus, et imperdiet diam vehicula.
-    Duis et nisi sed urna blandit bibendum et sit amet erat.
-    Suspendisse potenti. Curabitur consequat volutpat arcu nec
-    elementum. Etiam a turpis ac libero varius condimentum.
-    Maecenas sollicitudin felis aliquam tortor vulputate,
-    ac posuere velit semper.
-  </p>
-
-  <amp-ad width="100vw" height=320
-          type="adsense"
-          data-ad-client="ca-pub-2383777339857329"
-          data-ad-slot="4121425836"
-          data-adtest="on"
-          data-auto-format="rspv"
-          data-full-width>
-    <div overflow></div>
-  </amp-ad>
-
-  <p>
-    Fusce pretium tempor justo, vitae consequat dolor maximus eget.
-    Aliquam iaculis tincidunt quam sed maximus. Suspendisse faucibus
-    ornare sodales. Nullam id dolor vitae arcu consequat ornare a
-    et lectus. Sed tempus eget enim eget lobortis.
-    Mauris sem est, accumsan sed tincidunt ut, sagittis vel arcu.
-    Nullam in libero nisi.
-  </p>
-
-
-  <div class="further-indent">
-    <amp-ad width="100vw" height=320
-            type="adsense"
-            data-ad-client="ca-pub-2383777339857329"
-            data-ad-slot="4121425836"
-            data-adtest="on"
-            data-auto-format="rspv"
-            data-full-width>
-      <div overflow></div>
-    </amp-ad>
-
-
-    <p>
-      Sed pharetra semper fringilla. Nulla fringilla, neque eget
-      varius suscipit, mi turpis congue odio, quis dignissim nisi
-      nulla at erat. Duis non nibh vel erat vehicula hendrerit eget
-      vel velit. Donec congue augue magna, nec eleifend dui porttitor
-      sed. Cras orci quam, dignissim nec elementum ac, bibendum et purus.
-      Ut elementum mi eget felis ultrices tempus. Maecenas nec sodales
-      ex. Phasellus ultrices, purus non egestas ullamcorper, felis
-      lorem ultrices nibh, in tristique mauris justo sed ante.
-      Nunc commodo purus feugiat metus bibendum consequat. Duis
-      finibus urna ut ligula auctor, sed vehicula ex hecuba.
-      Sed sed augue auctor, porta turpis ultrices, cursus diam.
-      In venenatis aliquet porta. Sed volutpat fermentum quam,
-      ac molestie nulla porttitor ac. Donec porta risus ut enim
-      pellentesque, id placerat elit ornare.
-    </p>
-  </div>
-
-  <amp-ad width="100vw" height=320
-          type="adsense"
-          data-ad-client="ca-pub-2383777339857329"
-          data-ad-slot="4121425836"
-          data-auto-format="mcrspv"
-          data-full-width>
-    <div overflow></div>
-  </amp-ad>
-
-  <p id="section1">
-    Curabitur convallis, urna quis pulvinar feugiat, purus diam
-    posuere turpis, sit amet poodle purus justo et mi. Donec
-    sapien urna, aliquam ut lacinia quis, varius vitae ex.
-    Maecenas efficitur iaculis lorem, at imperdiet orci viverra
-    in. Nullam eu erat eu metus ultrices viverra a sit amet leo.
-    Pellentesque est felis, pulvinar mollis sollicitudin et,
-    suscipit eget massa. Nunc bibendum non nunc et consequat.
-    Quisque auctor est vel leo faucibus, non faucibus magna ultricies.
-    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-    posuere cubilia Curae; Vestibulum tortor lacus, bibendum et
-    enim eu, vehicula placerat erat. Nullam gravida rhoncus accumsan.
-    Integer suscipit iaculis elit nec mollis. Vestibulum eget arcu
-    nec lectus finibus rutrum vel sed orci.
-  </p>
-
-  <amp-ad width="100vw" height=320
-          type="adsense"
-          data-ad-client="ca-pub-2383777339857329"
-          data-ad-slot="4121425836"
-          data-adtest="on"
-          data-auto-format="rspv"
-          data-full-width>
+  <h2>AdSense</h2>
+  <amp-ad width=300 height=250
+      type="adsense"
+      data-ad-client="ca-pub-2005682797531342"
+      data-ad-slot="7046626912">
     <div placeholder></div>
     <div fallback></div>
-    <div overflow></div>
   </amp-ad>
-</div>
+
+  <amp-ad width=300 height=250
+          type="adsense"
+          data-ad-client="ca-pub-2005682797531342"
+          data-ad-slot="7046626912"
+          data-consent-notification-id="amp-user-notification">
+    <div placeholder>should only show ad after notification get dismissed</div>
+    <div fallback></div>
+  </amp-ad>
+
+  <div class=talldiv>
+    <!-- Make the second ad below the fold. -->
+  </div>
+
+  <h2>AdSense ad 2</h2>
+
+  <amp-ad width=300 height=250
+      type="adsense"
+      data-ad-client="ca-pub-2005682797531342"
+      data-ad-slot="7046626912"
+      data-adtest="on">
+    <div placeholder></div>
+    <div fallback></div>
+  </amp-ad>
+
+  <amp-sticky-ad layout="nodisplay">
+  <amp-ad width="300" height="250"
+      type="adsense"
+      data-ad-client="ca-pub-8588820008944775">
+  </amp-ad>
+  </amp-sticky-ad>
 
 </body>
 </html>
