--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <button on="tap:amp-user-notification.dismiss" tabindex="0">I accept</button>
   </amp-user-notification>
 
-  <h2>AdSense</h2>
+  <h1>AdSyco/h1>
+
   <amp-ad width=300 height=250
       type="adsense"
       data-ad-client="ca-pub-2005682797531342"
@@ -83,7 +84,7 @@
     <!-- Make the second ad below the fold. -->
   </div>
 
-  <h2>AdSense ad 2</h2>
+  <h2>AdSponsors</h2>
 
   <amp-ad width=300 height=250
       type="adsense"
