--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       top: calc(50% - 15px);
     }
     amp-user-notification {
-      background-color: black;
+      background-color: white;
       padding: 5px;
     }
   </style>
@@ -61,7 +61,7 @@
     <button on="tap:amp-user-notification.dismiss" tabindex="0">I accept</button>
   </amp-user-notification>
 
-  <h1>AdSyco</h1>
+  <h1>Mobile Ad</h1>
 
   <amp-ad width=300 height=250
       type="adsense"
