--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
   <link rel="canonical" href="http://nonblocking.io/" >
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-custom>
+    .pageWrapper {
+                background: red;
+            }
+            .adFlexWrapper {
+                overflow: hidden;
+            }
+            @media only screen 
+            and (min-width : 321px) {
+                .pageWrapper {
+                    background: blue;
+                }
+            }
+            @media only screen 
+            and (min-width : 740px) {
+                .pageWrapper {
+                    background: green;
+                }
+            }  
+            @media only screen 
+            and (min-width : 980px) {
+                .pageWrapper {
+                    background: yellow;
+                }
+            }      
+            @media only screen 
+            and (min-width : 1300px) {
+                .pageWrapper {
+                    background: purple;
+           }
+            }        
     amp-ad {
       max-width: 500px;
     }
@@ -63,6 +93,11 @@
 
   <h1>Mobile Ad</h1>
 
+  <div class="pageWrapper">
+            <div class="adFlexWrapper">
+                Advertisement
+  <iframe width="100%" height="250" scrolling="no" frameborder="0" marginwidth="0" marginheight="0" src="info.html"></iframe>
+      
   <amp-ad width=300 height=250
       type="adsense"
       data-ad-client="ca-pub-2005682797531342"
@@ -70,6 +105,9 @@
     <div placeholder></div>
     <div fallback></div>
   </amp-ad>
+</div>
+</div>
+
 
   <amp-ad width=300 height=250
           type="adsense"
