--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
     <button on="tap:amp-user-notification.dismiss" tabindex="0">I accept</button>
   </amp-user-notification>
 
-  <h1>Mobile Ad</h1>
+  <h1>Mobile Ads</h1>
 
   <div class="pageWrapper">
             <div class="adFlexWrapper">
-                Advertisement
+            Advertisement
   <iframe width="100%" height="250" scrolling="no" frameborder="0" marginwidth="0" marginheight="0" src="info.html"></iframe>
       
   <amp-ad width=300 height=250
@@ -105,6 +105,8 @@
     <div placeholder></div>
     <div fallback></div>
   </amp-ad>
+If
+
 </div>
 </div>
 
