--- a/index.html
+++ b/index.html
@@ -95,27 +95,18 @@
 
 <div class="pageWrapper">
 <div class="adFlexWrapper">
-            Advertisement
-
-<iframe width="100%" height="150" scrolling="no" frameborder="0" marginwidth="0" marginheight="0" src="info.html"></iframe>
+<iframe width="100%" height="250" scrolling="yes" frameborder="0" marginwidth="0" marginheight="0" src="info.html"></iframe>
 </div>
 </div>
 
 
-  <amp-ad width=300 height=250
-          type="adsense"
-          data-ad-client="ca-pub-2005682797531342"
-          data-ad-slot="7046626912"
-          data-consent-notification-id="amp-user-notification">
-    <div placeholder>should only show ad after notification get dismissed</div>
-    <div fallback></div>
-  </amp-ad>
+  
 
   <div class=talldiv>
     <!-- Make the second ad below the fold. -->
   </div>
 
-  <h2>AdSponsors</h2>
+  <h2>Sponsors</h2>
 
   <amp-ad width=300 height=250
       type="adsense"
