--- a/index.html
+++ b/index.html
@@ -97,20 +97,9 @@
 
   <h1>Mobile Ads</h1>
   
-<amp-sticky-ad layout="nodisplay">
-  <amp-ad width="300" height="250"
-      type="adsense"
-      data-ad-client="ca-pub-8588820008944775">
-  </amp-ad>
-  </amp-sticky-ad>
+
 
       <div class="viewport-100"></div>
-      <!--
-        `amp-fx-flying-carpet` elements must be positioned after the first viewport so make sure to place enough content before the element to cover the targeted viewport sizes. The box that follows is to ensure that the `amp-fx-flying-carpet` is placed after the first viewport.
-        <div class="viewport-100"></div>
-        ## Flying carpet for ads
-        `amp-fx-flying-carpet` can be used to display ads. Use the `height` parameter to specify the height of the flying carpets "window".
-      -->
 
       <div>
         <div class="amp-flying-carpet-text-border">Advertising</div>
@@ -120,21 +109,35 @@
         </amp-fx-flying-carpet>
         <div class="amp-flying-carpet-text-border">Advertising</div>
       </div>
+
       <div class="viewport-100"></div>
 
-      
-     <!--
-        <div class="viewport-100"></div>
-        ## Flying carpet for images
-        `amp-fx-flying-carpet` can be also used to display images.
-      -->
- 
-
- <amp-fx-flying-carpet height="300px">
+      <amp-fx-flying-carpet height="300px">
         <amp-img src="https://preview.amp.dev/static/samples//img/landscape_lake_1280x857.jpg" width="1280" height="853" alt="an image">
         </amp-img>
-  </amp-fx-flying-carpet>
-   <amp-user-notification
+      </amp-fx-flying-carpet>
+
+      <div class="viewport-100"></div>
+      <div>
+        <div class="amp-flying-carpet-text-border">Advertising</div>
+        <amp-fx-flying-carpet height="300px">
+          <amp-ad width="300" height="600" layout="fixed" type="doubleclick" data-slot="/35096353/amptesting/formats/flying_carpet">
+          </amp-ad>
+        </amp-fx-flying-carpet>
+        <div class="amp-flying-carpet-text-border">Advertising</div>
+      </div>
+
+
+      <div class="viewport-100"></div>
+
+      <amp-fx-flying-carpet height="300px">
+        <amp-img src="https://preview.amp.dev/static/samples//img/landscape_lake_1280x857.jpg" width="1280" height="853" alt="an image">
+        </amp-img>
+      </amp-fx-flying-carpet>
+
+
+
+  <amp-user-notification
       layout=nodisplay
       id="amp-user-notification">
     This site uses cookies to personalize content.
@@ -153,15 +156,14 @@
 
   <h2>Sponsors</h2>
    
-  <amp-ad width=300 height=250
-      type="adsense"
-      data-ad-client="ca-pub-2005682797531342"
-      data-ad-slot="7046626912"
-      data-adtest="on">
-    <div placeholder></div>
-    <div fallback></div>
-  </amp-ad>
-
   
+
+  <amp-sticky-ad layout="nodisplay">
+  <amp-ad width="300" height="250"
+      type="adsense"
+      data-ad-client="ca-pub-8588820008944775">
+  </amp-ad>
+  </amp-sticky-ad>
+
 </body>
 </html>
