--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div>
         <div class="amp-flying-carpet-text-border">Advertising</div>
         <amp-fx-flying-carpet height="300px">
-          <amp-ad width="300" height="600" layout="fixed" type="doubleclick" data-slot="/35096353/amptesting/formats/flying_carpet">
+          <amp-ad width="300" height="600" layout="fixed" type="doubleclick" data-slot="/22826216928/housediv">
           </amp-ad>
         </amp-fx-flying-carpet>
         <div class="amp-flying-carpet-text-border">Advertising</div>
