--- a/index.html
+++ b/index.html
@@ -119,16 +119,20 @@
 
       <div class="viewport-100"></div>
 
-      <amp-fx-flying-carpet height="300px">
-        <amp-img src="https://preview.amp.dev/static/samples//img/landscape_lake_1280x857.jpg" width="1280" height="853" alt="an image">
-        </amp-img>
-      </amp-fx-flying-carpet>
+      <amp-ad layout="fluid" height="fluid"
+    type="doubleclick"
+    data-slot="/22826216928/housediv"
+    data-multi-size="300x600"
+    data-multi-size-validation="false">
+  <div placeholder></div>
+  <div fallback></div>
+</amp-ad>
 
       <div class="viewport-100"></div>
       <div>
         <div class="amp-flying-carpet-text-border">Advertising</div>
         <amp-fx-flying-carpet height="300px">
-          <amp-ad width="300" height="600" layout="fixed" type="doubleclick" data-slot="/22826216928/housediv">
+          <amp-ad width="300" height="600" layout="fixed" type="doubleclick" data-slot="/">
           </amp-ad>
         </amp-fx-flying-carpet>
         <div class="amp-flying-carpet-text-border">Advertising</div>
@@ -137,11 +141,7 @@
 
       <div class="viewport-100"></div>
 
-      <amp-fx-flying-carpet height="300px">
-        <amp-img src="" width="1280" height="853" alt="an image">
-        </amp-img>
-      </amp-fx-flying-carpet>
-
+      
 
 
   
