--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <title>Mobile Ads</title>
   <link rel="canonical" href="http://nonblocking.io/" >
+  
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <style amp-custom>
-
-  </style>
+  
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
@@ -21,30 +20,25 @@
 
   <h1>Mobile Apk</h1>
 
-  <amp-ad layout="fluid" height="fluid"
-    type="doubleclick"
-    data-slot="/22826216928/housediv"
-    data-multi-size="300x600"
-    data-multi-size-validation="false">
-  
-  </amp-ad>
+  </div>
+  <div class=talldiv> 
+  <!-- Make the second ad below the fold. -->
+  </div>
 
-
+    
   <amp-user-notification
       layout=nodisplay
       id="amp-user-notification">
-    This site uses cookies to personalize content.
-    <a href="index.html">Learn.</a>
-    <button on="tap:amp-user-notification.dismiss" tabindex="0">I accept</button>
+    This shop uses cookies to personalize content.
+    <a href="ad.html">Learn.</a>
+    <button on="tap:amp-user-notification.dismiss" tabindex="0">I Accept</button>
   </amp-user-notification>
   
 
 
-  </div>
+  
    
-  <div class=talldiv> 
-  <!-- Make the second ad below the fold. -->
-  </div>
+  
   
 
   <amp-sticky-ad layout="nodisplay">
