--- a/index.html
+++ b/index.html
@@ -16,50 +16,17 @@
   <script async custom-element="amp-fx-flying-carpet" src="https://cdn.ampproject.org/v0/amp-fx-flying-carpet-0.1.js"></script>
 </head>
 <body>
-  <div align="center">
+ <div align="left">
 
-  <h1>Mobile Apk</h1>
+  <h1>Mobile</h1>
 
   </div>
+  
   <div class=talldiv> 
   <!-- Make the second ad below the fold. -->
   </div>
   
-<h4>
-Here are some key features of TikTok:
-</h4>  
 
-<p>
-Voiceover - An exciting feature of this application is the ability to record voiceovers for your videos.
-</p>
-  
-<p>  
-Music integration - Users can add background music to their videos, with a vast library of popular songs and sound bites to choose from.
-</p>
-  
-<p>
-Editing tools - This app provides a range of editing tools to customize videos, including filters, effects, text overlays, and stickers.
-</p>
-
-<p>
-Duets and collaborations - Users can create duets and collaborations with other users by combining videos and adding a split-screen.
-</p>
-
-<p>
-Hashtags and challenges - This platform popularized the use of hashtags and challenges, where users can participate in trending topics or create their challenges.
-</p>
-  
-<p>
-Discover feed - The Discover Feed in this app showcases trending videos and popular creators, providing a platform for users to find and follow content creators.
-</p>
-  
-<p>  
-Algorithmic feed - TikTok's algorithmic feed provides users with personalized video recommendations based on their viewing habits and interests.
-</p>
-  
-<p>
-Live video streaming - This feature allows you to broadcast live videos where your followers and non-followers can interact with you in real time.
-</p>
     
   <amp-user-notification
       layout=nodisplay
