Update and rename syco.html to index.amp.html

--- a/index.amp.html
+++ b/index.amp.html
@@ -2,7 +2,7 @@
 <html ⚡ lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Doubleclick Syco</title>
+  <title>Doubleclick</title>
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-custom>
     amp-ad {
@@ -19,25 +19,15 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
-  <h1> Syco Mobilez </h1>
+  <h1> Mobile </h1>
   <div class="amp-ad-container">
   <amp-ad width=320 height=50
 	  type="doubleclick"
 	  data-slot="/30497360/a4a/mobile_banner">
   </amp-ad>
   </div>
-  <p>
- Hodor hodor... Hodor hodor hodor... Hodor hodor hodor? Hodor. Hodor hodor... Hodor hodor hodor... Hodor hodor hodor hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor; hodor hodor? Hodor, HODOR hodor, hodor HODOR hodor, hodor hodor? Hodor, HODOR hodor, hodor hodor; hodor hodor? Hodor hodor; hodor hodor hodor, hodor, hodor hodor. Hodor hodor hodor, hodor, hodor hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor hodor, hodor, hodor hodor.
-
-Hodor hodor - hodor hodor hodor hodor hodor?! Hodor, HODOR hodor, hodor hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, HODOR hodor, hodor HODOR hodor, hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor - hodor, hodor. Hodor hodor, hodor. Hodor HODOR hodor, hodor hodor?! Hodor, hodor. Hodor. Hodor, HODOR hodor, hodor hodor. Hodor. Hodor, hodor. Hodor. Hodor, hodor hodor... Hodor hodor hodor, hodor, hodor hodor. Hodor, hodor... Hodor hodor hodor; hodor HODOR hodor, hodor hodor. Hodor.
-
-Hodor hodor; hodor hodor - hodor. Hodor, hodor. Hodor. Hodor, hodor - hodor?! Hodor! Hodor hodor, hodor - hodor... Hodor hodor hodor, hodor, hodor hodor. Hodor. Hodor hodor; hodor hodor, hodor. Hodor hodor, hodor. Hodor hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor... Hodor hodor hodor hodor!
-
-Hodor hodor - hodor hodor?! Hodor. Hodor hodor... Hodor hodor hodor hodor. Hodor. Hodor, hodor. Hodor. Hodor, hodor hodor, hodor, hodor hodor. Hodor, HODOR hodor, hodor hodor... Hodor hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor hodor. Hodor. Hodor hodor HODOR! Hodor HODOR hodor, hodor hodor hodor. Hodor.
-
- Hodor, hodor. Hodor. Hodor, hodor, hodor. Hodor hodor - hodor. Hodor hodor HODOR! Hodor HODOR hodor, hodor HODOR hodor, hodor hodor. Hodor, hodor, hodor. Hodor hodor?! Hodor hodor HODOR! Hodor hodor hodor hodor. Hodor. Hodor, hodor; hodor hodor hodor hodor. Hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor! Hodor hodor, hodor - hodor, hodor. Hodor hodor... Hodor hodor hodor. Hodor. Hodor hodor hodor hodor - hodor, hodor. Hodor hodor.
-
- Hodor hodor... Hodor hodor hodor... Hodor hodor hodor? Hodor. Hodor hodor... Hodor hodor hodor... Hodor hodor hodor hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor; hodor hodor? Hodor, HODOR hodor, hodor HODOR hodor, hodor hodor? Hodor, HODOR hodor, hodor hodor; hodor hodor? Hodor hodor; hodor hodor hodor, hodor, hodor hodor. Hodor hodor hodor, hodor, hodor hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor hodor, hodor, hodor hodor.
+<p>
+Hodor hodor... Hodor hodor hodor... Hodor hodor hodor? Hodor. Hodor hodor... Hodor hodor hodor... Hodor hodor hodor hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor; hodor hodor? Hodor, HODOR hodor, hodor HODOR hodor, hodor hodor? Hodor, HODOR hodor, hodor hodor; hodor hodor? Hodor hodor; hodor hodor hodor, hodor, hodor hodor. Hodor hodor hodor, hodor, hodor hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor hodor, hodor, hodor hodor.
 
 Hodor hodor - hodor hodor hodor hodor hodor?! Hodor, HODOR hodor, hodor hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, HODOR hodor, hodor HODOR hodor, hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor - hodor, hodor. Hodor hodor, hodor. Hodor HODOR hodor, hodor hodor?! Hodor, hodor. Hodor. Hodor, HODOR hodor, hodor hodor. Hodor. Hodor, hodor. Hodor. Hodor, hodor hodor... Hodor hodor hodor, hodor, hodor hodor. Hodor, hodor... Hodor hodor hodor; hodor HODOR hodor, hodor hodor. Hodor.
 
@@ -46,6 +36,16 @@ Hodor hodor; hodor hodor - hodor. Hodor, hodor. Hodor. Hodor, hodor - hodor?! Ho
 Hodor hodor - hodor hodor?! Hodor. Hodor hodor... Hodor hodor hodor hodor. Hodor. Hodor, hodor. Hodor. Hodor, hodor hodor, hodor, hodor hodor. Hodor, HODOR hodor, hodor hodor... Hodor hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor hodor. Hodor. Hodor hodor HODOR! Hodor HODOR hodor, hodor hodor hodor. Hodor.
 
 Hodor, hodor. Hodor. Hodor, hodor, hodor. Hodor hodor - hodor. Hodor hodor HODOR! Hodor HODOR hodor, hodor HODOR hodor, hodor hodor. Hodor, hodor, hodor. Hodor hodor?! Hodor hodor HODOR! Hodor hodor hodor hodor. Hodor. Hodor, hodor; hodor hodor hodor hodor. Hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor! Hodor hodor, hodor - hodor, hodor. Hodor hodor... Hodor hodor hodor. Hodor. Hodor hodor hodor hodor - hodor, hodor. Hodor hodor.
-  </p>
+
+Hodor hodor... Hodor hodor hodor... Hodor hodor hodor? Hodor. Hodor hodor... Hodor hodor hodor... Hodor hodor hodor hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor. Hodor. Hodor hodor HODOR! Hodor hodor; hodor hodor? Hodor, HODOR hodor, hodor HODOR hodor, hodor hodor? Hodor, HODOR hodor, hodor hodor; hodor hodor? Hodor hodor; hodor hodor hodor, hodor, hodor hodor. Hodor hodor hodor, hodor, hodor hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor hodor, hodor, hodor hodor.
+
+Hodor hodor - hodor hodor hodor hodor hodor?! Hodor, HODOR hodor, hodor hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, HODOR hodor, hodor HODOR hodor, hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor - hodor, hodor. Hodor hodor, hodor. Hodor HODOR hodor, hodor hodor?! Hodor, hodor. Hodor. Hodor, HODOR hodor, hodor hodor. Hodor. Hodor, hodor. Hodor. Hodor, hodor hodor... Hodor hodor hodor, hodor, hodor hodor. Hodor, hodor... Hodor hodor hodor; hodor HODOR hodor, hodor hodor. Hodor.
+
+Hodor hodor; hodor hodor - hodor. Hodor, hodor. Hodor. Hodor, hodor - hodor?! Hodor! Hodor hodor, hodor - hodor... Hodor hodor hodor, hodor, hodor hodor. Hodor. Hodor hodor; hodor hodor, hodor. Hodor hodor, hodor. Hodor hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor... Hodor hodor hodor hodor!
+
+Hodor hodor - hodor hodor?! Hodor. Hodor hodor... Hodor hodor hodor hodor. Hodor. Hodor, hodor. Hodor. Hodor, hodor hodor, hodor, hodor hodor. Hodor, HODOR hodor, hodor hodor... Hodor hodor hodor hodor! Hodor, hodor. Hodor. Hodor, hodor hodor hodor hodor hodor. Hodor. Hodor hodor HODOR! Hodor HODOR hodor, hodor hodor hodor. Hodor.
+
+Hodor, hodor. Hodor. Hodor, hodor, hodor. Hodor hodor - hodor. Hodor hodor HODOR! Hodor HODOR hodor, hodor HODOR hodor, hodor hodor. Hodor, hodor, hodor. Hodor hodor?! Hodor hodor HODOR! Hodor hodor hodor hodor. Hodor. Hodor, hodor; hodor hodor hodor hodor. Hodor. Hodor hodor, hodor. Hodor hodor hodor! Hodor! Hodor hodor, hodor - hodor, hodor. Hodor hodor... Hodor hodor hodor. Hodor. Hodor hodor hodor hodor - hodor, hodor. Hodor hodor.
+</p>
 </body>
 </html>
