--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <amp-img alt="guccibag"
       id="first-img"
       class="hero"
-      src="gucci.jpg"
+      src="ak-47.jpg"
       width="600"
       height="1200"
       layout="fill">
