--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mobile</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
   <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
-  <script src="viewer.js"></script>
+  <script src="src/viewer.js"></script>
   <style>
     html, body {
       overflow: hidden;
