--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- build:js -->
   <script src="https://connect.facebook.net/en_US/fbinstant.6.2.js"></script>
@@ -114,12 +115,12 @@
   </script>
 
   <header>
-    <h1>Instant Games Demos</h1>
-    <h2>Ads Monetization</h2>
+    <h1>Game</h1>
+    <h2>Monetization</h2>
   </header>
 
   <section>
-    <h3>Interstitial Ads</h3>
+    <h3>Interstitial</h3>
     <input type="text"
       id="interstitial-placement"
       placeholder="Interstitial Placement ID"/>
@@ -134,7 +135,7 @@
   </section>
 
   <section>
-    <h3>Rewarded Videos</h3>
+    <h3>Call Us</h3>
     <input type="text"
       id="rewarded-placement"
       placeholder="Rewarded Placement ID"/>
