--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
   </script>
 
   <header>
-    <h1>Game</h1>
+    <h1>Callus</h1>
     <h2>Monetization</h2>
   </header>
-
+  
+  <div class="ezoic-basic-ad" style="width:100px;height:50px"></div>
+  
   <section>
     <h3>Interstitial</h3>
     <input type="text"
@@ -135,7 +137,7 @@
   </section>
 
   <section>
-    <h3>Call Us</h3>
+    <h3>Rewarded</h3>
     <input type="text"
       id="rewarded-placement"
       placeholder="Rewarded Placement ID"/>
