--- a/ad.html
+++ b/ad.html
@@ -12,6 +12,12 @@
         </style>
     </head>
     <body>
-        
+<div class="amp-flying-carpet-text-border">Advertising</div>
+<amp-fx-flying-carpet height="300px">
+  <amp-ad width="300" height="600" layout="fixed" type="doubleclick" data-slot="/35096353/amptesting/formats/flying_carpet">
+  </amp-ad>
+</amp-fx-flying-carpet>
+<div class="amp-flying-carpet-text-border">Advertising</div>
+
     </body>
 </html>
